Add index and style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <!--Container-->
+    <div class="container">
+      <div class="container-60">
+        <h1 class="title">our team</h1>
+        <h3 class="subtitle">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
+          sint voluptatem voluptate iste fuga excepturi ad eaque maxime nam
+          dolor.
+        </h3>
+      </div>
+      <!--Card Container-->
+      <div class="cards__container"></div>
+      <div class="form">
+        <h3 class="title">add a new member</h3>
+        <!--Nome-->
+        <p class="form__label"><label for="name">Name</label></p>
+        <input class="form__input" type="text" name="name" id="name" />
+        <!--Ruolo-->
+        <p class="form__label"><label for="role">Role</label></p>
+        <input class="form__input" type="text" name="role" id="role" />
+        <!--Immagine-->
+        <p class="form__label"><label for="image">Image</label></p>
+        <input class="form__input" type="text" name="image" id="image" />
+        <!--Add-->
+        <button class="btn" id="add-btn">Add</button>
+      </div>
+    </div>
     <script src="./js/main.js"></script>
   </body>
 </html>
