--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <input class="form__input" type="text" name="role" id="role" />
         <!--Immagine-->
         <p class="form__label"><label for="image">Image</label></p>
-        <input class="form__input" type="text" name="image" id="image" />
+        <input class="form__input" type="text" name="img" id="img" />
         <!--Add-->
         <button class="btn" id="add-btn">Add</button>
       </div>
